GNOME Bugzilla – Bug 719469
Alternative for deprecated function in gtkstyle.h is incorrectly truncated
Last modified: 2013-12-01 22:04:43 UTC
gtkstyle.h suggests gtk_widget_modify_bg be replaced with "gtk_widget_override_background" which doesn't exist. It should suggest gtk_widget_override_background_color instead.
Created attachment 263002 [details] [review] Patch which fixes the bug against git master as of e45ea70936ee30344b96ab99c7651fef58ebd4ff
Review of attachment 263002 [details] [review]: sure