Correct the deprecation annotation for gtk_widget_modify_bg

It was pointing to a nonexisting function.

https://bugzilla.gnome.org/show_bug.cgi?id=719469